# Gautor_Complete

./: CMakeLists.txt  README.md
include/: hashmap.h  loader.h  trie.h
src/: benchmark.cpp  gui.cpp  hashmap.cpp  loader.cpp  trie.cpp
tests/: hashmap_tests.cpp  trie_tests.cpp
